[package]
name = "cycle-sound-output-device"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.52.0", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Foundation", "Win32_Devices_FunctionDiscovery", "Win32_Media_Audio_Endpoints"] }
com-policy-config = "0.5.0"
anyhow = "1.0.76"
tray-icon = "0.11.2"
ico = "0.3.0"
tao = "0.24.0"
directories = "5.0.1"
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
